[project]
name = "sat"
version = "0.1.0"
description = "Code reproducing https://arxiv.org/abs/2501.03281"
authors = [
    {name = "Jagatheesan Kunasaikaran"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (>=2.3.1,<3.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "sympy (>=1.14.0,<2.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.30.1"

